# CmakeAppLibrary

./: CMakeLists.txt
application/: main.cpp  main.hpp
